# omi

./: .env.example  .gitignore  HANDOFF.md  README.md  render.yaml  requirements.txt
apps/api/: README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_account_labels.py  0003_investigation_verdict.py  0004_scan_jobs.py  0005_referral_and_ip.py  0006_content_reply_pods.py  0007_user_graphs_and_password_reset.py
apps/api/app/: __init__.py  main.py  orchestrator.py  schemas.py
apps/api/app/content/: platforms.py  seed.py  service.py
apps/api/app/core/: auth.py  background.py  cache.py  config.py  ip.py  metrics.py  middleware.py  rate_limit.py  referrals.py
apps/api/ml_training/: train.py
apps/api/scripts/: calibrate.py  datasets.py  fit_correlation.py  train_model.py
apps/api/tests/: conftest.py  test_account_deletion.py  test_account_history.py  test_account_labels.py  test_ai_writing_benchmark.py  test_ai_writing_demotion.py  test_alert_delivery.py  test_alert_delivery_smoke.py  test_batch_pricing.py  test_channel_intelligence.py  test_commenter_history.py  test_community_anchor.py  test_content_intelligence.py  test_content_seed.py  test_contribution_breakdown.py  test_coordination.py  test_coordination_benchmark.py  test_coordination_elevate.py  test_coordination_layer.py  test_dataset_adapters.py  test_dataset_ledger.py  test_demo_scan.py  test_detection.py  test_evaluation_benchmark.py  test_gap04_detectors.py  test_graph.py  test_intelligence_omiscore.py  test_intelligence_route.py  test_investigate_scan_link.py  test_investigation_hardening.py  test_investigation_local_mode.py  test_investigations.py  test_memory.py  test_memory_benchmark.py  test_ml_export.py  test_ml_features.py  test_ml_status.py  test_monitoring.py  test_narrative.py  test_password_reset.py  (+15 more)
(+254 files in other folders)
